minor, fixed images not showing

--- a/src/Application/SubscriberBundle/Resources/public/css/default.css
+++ b/src/Application/SubscriberBundle/Resources/public/css/default.css
@@ -293,7 +293,7 @@ header #logo {
     text-decoration: underline;
 }
 .home-ico {
-  background: url("images/home.png") no-repeat scroll 15px center / 23px 23px rgba(0, 0, 0, 0);
+  background: url("../images/home.png") no-repeat scroll 15px center / 23px 23px rgba(0, 0, 0, 0);
   font-size: 10px;
   margin-top: 2.1em;
   padding-left: 4em;
